// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Header> with description renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderRadius": 5,
      "margin": 10,
      "padding": 10,
    }
  }
>
  <Title
    text="Article description"
  />
</View>
`;

exports[`Comments<Header> with title renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderRadius": 5,
      "margin": 10,
      "padding": 10,
    }
  }
>
  <Title
    text="Important post title"
  />
</View>
`;

exports[`Comments<Header> without description doesn't render 1`] = `""`;
